# meridian

./: .eslintrc.json  .gitignore  .prettierignore  LICENSE  README.md  components.json  index.html  notes.md  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
.cursor/rules/: backend.mdc  frontend.mdc
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/cache/: mod.rs  network_cache.rs  process_cache.rs  traits.rs
src-tauri/src/commands/: cache.rs  mod.rs  network.rs  process_info.rs  throttling.rs
src-tauri/src/modules/: mod.rs  network_monitor.rs  process_metadata.rs  system_monitor.rs
src-tauri/src/utils/: logger.rs
src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx  settings.ts
src/components/: network-controls.tsx  process-controls.tsx  process-filter.tsx  process-item.tsx  process-manager.tsx  search-input.tsx  settings-menu.tsx  speed-control.tsx  stat-card.tsx  theme-selector.tsx  traffic-view.tsx
src/components/ui/: button.tsx  checkbox.tsx  dropdown-menu.tsx  label.tsx  resizable-panel.tsx  select.tsx  separator.tsx  tabs.tsx  toggle.tsx
src/hooks/: use-processes.ts  use-traffic-monitor.ts  use-window-state.ts
src/lib/: utils.ts
src/providers/: theme-provider.tsx
src/styles/: blue.css  dark.css  globals.css  green.css  light.css  red.css
src/types/: network.ts  theme.ts
src/utils/: cache.ts
