[package]
name = "meridian"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meridian_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2.0.0-beta.1"
tauri-plugin-opener = "2.0.0-beta.1"
tauri-plugin-window-state = { version = "2.0.0-beta.1" }
sysinfo = "0.29.10"
once_cell = "1.18.0"
base64 = "0.21"
image = "0.24"
parking_lot = "0.12.1"
netstat2 = "0.9.1"
directories = "5.0.1"
env_logger = "0.11"
chrono = "0.4"
log = "0.4"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Controls",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_System_Ole"
] }
rayon = "1.8.1"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
ctor = "0.2"
pcap = "1.1.0"
etherparse = "0.13.0"
get_if_addrs = "0.5.3"
lazy_static = "1.4.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]

